# graduate

./: .gitignore  .replit  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  additional.toml  build.rs  datetime.txt  descriptions.txt  events.toml  graduate.desktop  index.toml  paths.txt  with.txt
.cargo/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  clippy-check.yml  debug.yml
audio/课间操/: 跑操.m4a
audio/铃声/: 中学上课铃.aac  中学下课铃.aac  中学预备铃.aac  春.m4a  祈福校歌.aac  运动员进行曲.aac
data/: README.md  index.toml
data/audio/铃声/: 瓦滴微笑.m4a
data/profile/: 1.toml  2.toml  个人信息.docx
image/camera/: desktop.ini
image/experience/: datetime.txt  descriptions.txt  paths.txt  with.txt
profile/: 1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  15.toml  16.toml  17.toml  18.toml  19.toml  2.toml  20.toml  21.toml  22.toml  23.toml  24.toml  25.toml  26.toml  27.toml  28.toml  29.toml  3.toml  30.toml  31.toml  32.toml  33.toml  34.toml  35.toml  36.toml  37.toml  38.toml  39.toml  4.toml  40.toml  41.toml  42.toml  43.toml  44.toml  45.toml  (+17 more)
src/: README.md  audio.rs  backup.rs  choosing.rs  configs.rs  entries.rs  exchange.rs  floatingelement.rs  game.rs  gen.cpp  graduation.rs  imageviewer.rs  main.rs  make_toml.cpp  overlay.rs  pinpoint.rs  plots.rs  quadbutton.rs  sink.rs  subscriptions.rs  visiting.rs
src/runtime/: icon.rc
src/style/: h_slider.rs  mod.rs
src/xpack/: LICENSE
