[package]
authors = ["Amazingkenneth <amazingkenneth@outlook.com>"]
description = "这是一个纪实性项目；打开它，一起回忆过往美好初中生活。"
edition = "2021"
name = "graduate"
readme = "README.md"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"
license = "GPL-3.0"
repository = "https://github.com/Amazingkenneth/graduate"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"

[dependencies]
cpal = "0"
directories = "5"
iced = { version = "0", features = ["image", "svg", "tokio"] }
iced_aw = { version = "0", features = ["floating_element"] }
iced_native = "0"
image = "0.24"
lofty = "0"
rand = "0"
reqwest = "0"
rodio = { version = "0", default-features = false, features = [
    "symphonia-all",
] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.26", features = ["full"] }
toml = "0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true      # Automatically strip symbols from the binary.

[package.metadata.deb]
assets = [
    [
        "graduate.desktop",
        "usr/share/applications/",

        "644",
    ],
    [
        "target/release/graduate",
        "usr/bin/graduate",

        "755",
    ],
]
depends = "libasound2-dev"
